// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boolean Checkboxes All props 1`] = `
<div
  class="tr__form-input-checkbox-group-container"
>
  <div
    class="tr__form-input-checkbox-group-column no-wrap"
  >
    <div
      class="tr__form-input-checkbox-container checked"
    >
      <div
        class="label-input-container"
      >
        <input
          checked=""
          class="_input-checkbox"
          id="SelectWidgetId_true"
          name="SelectWidgetId"
          type="checkbox"
          value="true"
        />
        <label
          for="SelectWidgetId_true"
        >
          <span>
            testLabel
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Boolean Checkboxes Default props 1`] = `
<div
  class="tr__form-input-checkbox-group-container"
>
  <div
    class="tr__form-input-checkbox-group-column no-wrap"
  >
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          id="SelectWidgetId_true"
          name="SelectWidgetId"
          type="checkbox"
          value="true"
        />
        <label
          for="SelectWidgetId_true"
        >
          <span>
            Yes
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Boolean Checkboxes Disabled 1`] = `
<div
  class="tr__form-input-checkbox-group-container"
>
  <div
    class="tr__form-input-checkbox-group-column no-wrap"
  >
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          disabled=""
          id="SelectWidgetId_true"
          name="SelectWidgetId"
          type="checkbox"
          value="true"
        />
        <label
          for="SelectWidgetId_true"
        >
          <span>
            Yes
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes All props 1`] = `
<div
  class="tr__form-input-checkbox-group-container"
>
  <div
    class="tr__form-input-checkbox-group-column no-wrap"
  >
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          id="SelectWidgetId_test1"
          name="SelectWidgetId"
          type="checkbox"
          value="test1"
        />
        <label
          for="SelectWidgetId_test1"
        >
          <span>
            something:test1
          </span>
        </label>
      </div>
    </div>
    <div
      class="tr__form-input-checkbox-container checked"
    >
      <div
        class="label-input-container"
      >
        <input
          checked=""
          class="_input-checkbox"
          id="SelectWidgetId_test2"
          name="SelectWidgetId"
          type="checkbox"
          value="test2"
        />
        <label
          for="SelectWidgetId_test2"
        >
          <span>
            label for test2
          </span>
        </label>
      </div>
    </div>
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          id="SelectWidgetId_test3"
          name="SelectWidgetId"
          type="checkbox"
          value="test3"
        />
        <label
          for="SelectWidgetId_test3"
        >
          <span>
            label for test3
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes Default props 1`] = `
<div
  class="tr__form-input-checkbox-group-container"
>
  <div
    class="tr__form-input-checkbox-group-column no-wrap"
  />
</div>
`;

exports[`Checkboxes Disabled 1`] = `
<div
  class="tr__form-input-checkbox-group-container"
>
  <div
    class="tr__form-input-checkbox-group-column no-wrap"
  >
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          disabled=""
          id="SelectWidgetId_test1"
          name="SelectWidgetId"
          type="checkbox"
          value="test1"
        />
        <label
          for="SelectWidgetId_test1"
        >
          <span>
            main:test1
          </span>
        </label>
      </div>
    </div>
    <div
      class="tr__form-input-checkbox-container checked"
    >
      <div
        class="label-input-container"
      >
        <input
          checked=""
          class="_input-checkbox"
          disabled=""
          id="SelectWidgetId_test2"
          name="SelectWidgetId"
          type="checkbox"
          value="test2"
        />
        <label
          for="SelectWidgetId_test2"
        >
          <span>
            label for test2
          </span>
        </label>
      </div>
    </div>
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          disabled=""
          id="SelectWidgetId_test3"
          name="SelectWidgetId"
          type="checkbox"
          value="test3"
        />
        <label
          for="SelectWidgetId_test3"
        >
          <span>
            label for test3
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes With columns 1`] = `
<div
  class="tr__form-input-checkbox-group-container"
>
  <div
    class="tr__form-input-checkbox-group-column"
  >
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          id="SelectWidgetId_test1"
          name="SelectWidgetId"
          type="checkbox"
          value="test1"
        />
        <label
          for="SelectWidgetId_test1"
        >
          <span>
            main:test1
          </span>
        </label>
      </div>
    </div>
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          id="SelectWidgetId_test2"
          name="SelectWidgetId"
          type="checkbox"
          value="test2"
        />
        <label
          for="SelectWidgetId_test2"
        >
          <span>
            label for test2
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="tr__form-input-checkbox-group-column"
  >
    <div
      class="tr__form-input-checkbox-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="_input-checkbox"
          id="SelectWidgetId_test3"
          name="SelectWidgetId"
          type="checkbox"
          value="test3"
        />
        <label
          for="SelectWidgetId_test3"
        >
          <span>
            label for test3
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes allow select all 1`] = `
<div
  class="apptr__form-input-container"
>
  <div
    class="tr__form-input-checkbox-group-column"
  >
    <div
      class="label-input-container"
    >
      <input
        class="_input-checkbox"
        id="SelectWidgetId_selectAll"
        name="SelectWidgetId"
        type="button"
        value="main:SelectAll"
      />
    </div>
  </div>
  <div
    class="tr__form-input-checkbox-group-container"
  >
    <div
      class="tr__form-input-checkbox-group-column"
    >
      <div
        class="tr__form-input-checkbox-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="_input-checkbox"
            id="SelectWidgetId_test1"
            name="SelectWidgetId"
            type="checkbox"
            value="test1"
          />
          <label
            for="SelectWidgetId_test1"
          >
            <span>
              main:test1
            </span>
          </label>
        </div>
      </div>
      <div
        class="tr__form-input-checkbox-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="_input-checkbox"
            id="SelectWidgetId_test2"
            name="SelectWidgetId"
            type="checkbox"
            value="test2"
          />
          <label
            for="SelectWidgetId_test2"
          >
            <span>
              label for test2
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="tr__form-input-checkbox-group-column"
    >
      <div
        class="tr__form-input-checkbox-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="_input-checkbox"
            id="SelectWidgetId_test3"
            name="SelectWidgetId"
            type="checkbox"
            value="test3"
          />
          <label
            for="SelectWidgetId_test3"
          >
            <span>
              label for test3
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
